pantry: implement attach and detach
store constructed volume and volume construction request for a given id
