# pantry/src/server.rs
@@ -1,20 +1,87 @@
 // Copyright 2022 Oxide Computer Company
 
 use super::pantry::Pantry;
-use anyhow::{anyhow, Result};
-use dropshot::{
-    endpoint, HttpError, HttpResponseDeleted, HttpResponseOk,
-    Path as TypedPath, RequestContext, TypedBody,
-};
-use schemars::JsonSchema;
-use serde::{Deserialize, Serialize};
-use slog::{o, Logger};
-use std::collections::BTreeMap;
+
 use std::net::SocketAddr;
 use std::sync::Arc;
 
-pub fn make_api() -> Result<dropshot::ApiDescription<Arc<Pantry>>> {
+use anyhow::{anyhow, Result};
+use dropshot::endpoint;
+use dropshot::HttpError;
+use dropshot::HttpResponseDeleted;
+use dropshot::HttpResponseOk;
+use dropshot::Path as TypedPath;
+use dropshot::RequestContext;
+use dropshot::TypedBody;
+use schemars::JsonSchema;
+use serde::{Deserialize, Serialize};
+use slog::{o, Logger};
+
+use crucible::VolumeConstructionRequest;
+
+#[derive(Deserialize, JsonSchema)]
+struct VolumePath {
+    pub id: String,
+}
+
+#[derive(Deserialize, JsonSchema)]
+struct AttachRequest {
+    pub volume_construction_request: VolumeConstructionRequest,
+}
+
+#[derive(Serialize, JsonSchema)]
+struct AttachResult {
+    pub id: String,
+}
+
+/// Construct a volume from a VolumeConstructionRequest, storing the result in
+/// the Pantry.
+#[endpoint {
+    method = POST,
+    path = "/crucible/pantry/0/volume/{id}",
+}]
+async fn attach(
+    rc: Arc<RequestContext<Arc<Pantry>>>,
+    path: TypedPath<VolumePath>,
+    body: TypedBody<AttachRequest>,
+) -> Result<HttpResponseOk<AttachResult>, HttpError> {
+    let path = path.into_inner();
+    let body = body.into_inner();
+    let pantry = rc.context();
+
+    pantry
+        .attach(path.id.clone(), body.volume_construction_request)
+        .await
+        .map_err(|e| HttpError::for_internal_error(e.to_string()))?;
+
+    Ok(HttpResponseOk(AttachResult { id: path.id }))
+}
+
+/// Flush and close a volume, removing it from the Pantry
+#[endpoint {
+    method = DELETE,
+    path = "/crucible/pantry/0/volume/{id}",
+}]
+async fn detach(
+    rc: Arc<RequestContext<Arc<Pantry>>>,
+    path: TypedPath<VolumePath>,
+) -> Result<HttpResponseDeleted, HttpError> {
+    let path = path.into_inner();
+    let pantry = rc.context();
+
+    pantry
+        .detach(path.id)
+        .await
+        .map_err(|e| HttpError::for_internal_error(e.to_string()))?;
+
+    Ok(HttpResponseDeleted())
+}
+
+pub fn make_api() -> Result<dropshot::ApiDescription<Arc<Pantry>>, String> {
     let mut api = dropshot::ApiDescription::new();
+
+    api.register(attach)?;
+    api.register(detach)?;
 
     Ok(api)
 }
@@ -24,7 +91,7 @@ pub async fn run_server(
     bind_address: SocketAddr,
     df: Arc<Pantry>,
 ) -> Result<()> {
-    let api = make_api()?;
+    let api = make_api().map_err(|e| anyhow!(e))?;
 
     let server = dropshot::HttpServerStarter::new(
         &dropshot::ConfigDropshot {
